# BODAQS

./: .gitattributes  .gitignore  PROJECT_CONTEXT.md  README.md  README_old.md  agents.md  pytest.ini  requirements.txt
analysis/: .bodaqs_preprocess_last_dir.json  .bodaqs_preprocess_sha_cache.json  BODAQS_auto_preprocess_simple_suspension_metrics.ipynb  BODAQS_library_manager.ipynb  BODAQS_simple_suspension_metrics.ipynb  bodaqs_batch_preprocessing_pipeline.ipynb  bodaqs_batch_preprocessor.ipynb  bodaqs_data_explorer.ipynb  bodaqs_data_syn_bike_export.ipynb  bodaqs_event_schema_test_harness.ipynb  bodaqs_macro_dashboard.ipynb  bodaqs_macro_dashboard_pipeline.ipynb  bodaqs_one_step_suspension_metrics.ipynb  bodaqs_session_browser.ipynb  bodaqs_session_test_notebook.ipynb  bodaqs_simple_suspension_metrics.ipynb  bodaqs_widget_test_notebook.ipynb  cleanup_signal_sensor_semantics.txt  filter_refactor.md  fit_integration_context.md  launch_jlab.bat  launch_jlab.bat - Shortcut.lnk  pyproject.toml
analysis/.nb_smoke_exec/: bodaqs_batch_preprocessing_pipeline.exec.ipynb  bodaqs_batch_preprocessing_pipeline.executed.ipynb  bodaqs_event_schema_test_harness.exec.ipynb  bodaqs_event_schema_test_harness.executed.ipynb
analysis/.virtual_documents/: bodaqs_widget_test_notebook.ipynb
analysis/Documentation/: Analysis workflow.xlsx  BODAQS_Bike_Profile_Contract_v0_draft.md  BODAQS_Event_Schema_Spec_v1_Full.md  BODAQS_Event_Table_Contract_v0_1_3_draft.md  BODAQS_Minimum_Signal_Registry_Semantics_v0_1.md  BODAQS_Minimum_Signal_Registry_Semantics_v0_1_1.md  bodaqs_bookmarks_spec_v1.md  (+15 more)
(+586 files in other folders)
